[#20712]Improved view of buttons

--- a/web_tree_many2one_clickable/static/src/css/web_tree_many2one_clickable.scss
+++ b/web_tree_many2one_clickable/static/src/css/web_tree_many2one_clickable.scss
@@ -1,7 +1,7 @@
 td.o_many2one_cell {
     a {
         margin-left: 0.5em;
-        visibility: hidden;
+        visibility: visible;
     }
 
     &:hover a {
