--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -297,7 +297,7 @@
                     <group>
                         <group>
                             <field name="product_id" readonly="context.get('from_update_wiz', False)"/>
-                            <field name="product_qty" invisible="context.get('from_update_wiz', False)" />
+                            <field name="product_qty" readonly="context.get('from_update_wiz', False)" />
                             <!--                            <field name="product_uom"/>-->
                             <field name="before_disc_price_unit" invisible="context.get('from_update_wiz', False)" />
                             <field name="discount" invisible="context.get('from_update_wiz', False)" />
